--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <script src="index.js" charset="utf-8"></script>
   <footer>
-    Made with ❤️ in London.
+    Simple Drum Kit😁😁
   </footer>
 
 </body>
